Thu Aug 24 18:02:35 2000  Christopher Faylor <cgf@cygnus.com>

	* ps.cc (main): Always print a cygwin process using cygwin paths.

Thu Aug 24 17:16:14 2000  Christopher Faylor <cgf@cygnus.com>

	* select.cc (cygwin_select): Correct logic for "always_ready" fds or
	when there is no wait specified.
	* syslog.cc (pass_handler::set_message): Zero the buffer prior to
	setting it.

2000-08-24  Egor Duda  <deo@logos-m.ru>

	* include/cygwin/core_dump.h: New file, contains structures used in
	cygwin core core files.
	* include/sys/procfs.h: New file, needed to autoconfigure cygwin core
	dumps support in bfd.

Thu Aug 24 13:50:15 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (parse_thing): nobinmode should force O_TEXT.
	(regopt): Use correct path to find LOCAL_MACHINE registry options.
	* fhandler.cc (fhandler_base::open): Set binary mode only when binmode
	== O_BINARY.
	* pipe.cc (pipe): Pipe handling should rely on binmode not _fmode now
	that the two are different.

Thu Aug 24 13:21:09 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sys/cygwin.h (strace_printf_wrap): Force printing when
	_STRACE_SYSTEM.
	(strace_printf_wrap1): Ditto.

Thu Aug 24 12:30:17 2000  Christopher Faylor <cgf@cygnus.com>

	* debug.h: Allow some debug defines for use in header files.

Wed Aug 23 23:00:24 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move exception list and constructor stuff
	earlier in the process.  Use new second argument to set_myself.
	(cygwin_dll_init): Initialize exception list and constructor stuff
	here.
	(_dll_crt0): And here.  Also, deal with inherited pinfo shared memory
	region from parent.
	* pinfo.cc (set_myself): Accept a second argument signifying the a
	shared memory region, passed from an execing parent.
	(pinfo_init): Ditto.
	* pinfo.h: Ditto.
	* shared.h (child_info): Add a handle field to pass to child.
	* spawn.cc (spawn_guts): Create a shared handle to pass to an execed
	child.