@@ -61,7 +61,8 @@ typedef enum
     CW_USER_DATA,
     CW_PERFILE,
     CW_GET_CYGDRIVE_PREFIXES,
-    CW_GETPINFO_FULL
+    CW_GETPINFO_FULL,
+    CW_INIT_EXCEPTIONS
   } cygwin_getinfo_types;
 
 #define CW_NEXTPID 0x80000000	// or with pid to get next one
