@@ -1,6 +1,10 @@
-Thu Aug 24 18:02:35 2000  Christopher Faylor <cgf@cygnus.com>
+Thu Aug 24 22:17:19 2000  Christopher Faylor <cgf@cygnus.com>
 
-	* ps.cc (main): Always print a cygwin process using cygwin paths.
+	* external.cc (cygwin_internal): Add CW_INIT_EXCEPTIONS to allow cygwin
+	exception handling on threads not created by cygwin.
+	* sigproc.cc (proc_terminate): Don't release pinfo structs since we are
+	exiting.
+	* include/sys/cygwin.h: Add CW_INIT_EXCEPTIONS.
 
 Thu Aug 24 17:16:14 2000  Christopher Faylor <cgf@cygnus.com>
 
